<resources>
    <string name="app_name">PTApp</string>

    <!-- Register screen -->
    <string name="firstName_input">First name</string>
    <string name="secondName_input">Second name</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="confirmPassword_input">Confirm Password</string>
    <string name="createAccBtn">Create Account</string>
    <string name="loginBtn">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Action bar text -->
    <string name="workoutBar">Workout</string>

    <!-- Buttons -->
    <string name="startWorkoutBtn">Start Workout</string>
</resources>
