<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textColor="#ffffff"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/loginEmail_input"
            style="@style/register_input"
            android:inputType="textEmailAddress"
            android:hint="@string/email_input"
            android:autofillHints="Email Address"/>

        <EditText
            android:id="@+id/loginPassword_input"
            style="@style/register_input"
            android:inputType="textPassword"
            android:hint="@string/password_input"
            android:autofillHints="Password"/>

        <Button
            android:id="@+id/loginBtn"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:backgroundTintMode="add"
            android:background="@drawable/rounded_btn"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>


    <Button
        android:id="@+id/loginToRegister"
        style="@style/register_login_Btn"
        android:text="@string/createAccBtn"
        />

</RelativeLayout>